--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "notes4all",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "Note taker project in Node",
   "keywords": [
     "notes"
@@ -18,6 +18,7 @@
     "better-sqlite3": "^12.4.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "zod": "^4.1.12"
   }
 }
